k8s/fortress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortress-ingress
  annotations: {}
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fortress-service
            port:
              number: 80
